test/libsolidity/syntaxTests/literalSuffixes/usableAsSuffix/invalid_free_view_function_as_suffix.sol
function suffix(uint x) view returns (uint) {}

contract C {
    uint a = 1000 suffix;
}
// ----
// TypeError 4438: (74-85): The literal suffix needs to be a pre-defined suffix or a file-level pure function.
